Nikola auto commit.
Source commit: 1ad9b3e380ade29266cf837f97bb7b45c6793b51
Nikola version: 8.1.3

--- a/assets/css/all-nocdn.css
+++ b/assets/css/all-nocdn.css
@@ -630,6 +630,13 @@ tbody tr:nth-child(odd) th {
   }
 }
 
+/*
+IMAGES
+ */
+img[src$="centerme"] {
+  display:block;
+  margin: 0 auto;
+}
 
 /* Minimal style sheet for the HTML output of Docutils.                    */
 /*                                                                         */
