--- a/themes/jidn/assets/css/jidn.css
+++ b/themes/jidn/assets/css/jidn.css
@@ -977,3 +977,24 @@ iframe {
   height: 100%;
   aspect-ratio: 16 / 9;
 }
+
+/* Header permalinks */
+h1:hover .headerlink, h2:hover .headerlink,
+h3:hover .headerlink, h4:hover .headerlink,
+h5:hover .headerlink, h6:hover .headerlink {
+    display: inline;
+}
+
+.headerlink {
+    display: none;
+    color: #ddd;
+    margin-left: 0.2em;
+    padding: 0 0.2em;
+}
+
+.headerlink:hover {
+    opacity: 1;
+    background: #ddd;
+    color: #000;
+    text-decoration: none;
+}
