--- a/themes/jidn/templates/post.tmpl
+++ b/themes/jidn/templates/post.tmpl
@@ -29,9 +29,9 @@
 <%block name="content">
 <article class="post-${post.meta('type')} h-entry hentry postpage" itemscope="itemscope" itemtype="http://schema.org/BlogPosting">
     ${pheader.html_post_header()}
-    <section class="e-content entry-content" itemprop="articleBody text">
+    <div class="e-content entry-content" itemprop="articleBody text">
     ${post.text()}
-    </section>
+    </div>
     ${sharing()}
     ${bio()}
 <%doc>
